Adding Angular Material and game-scores tab

--- a/GeoMaster-UI/angular.json
+++ b/GeoMaster-UI/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "GeoMaster.UI": {
+    "GeoMaster-UI": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -60,10 +61,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "GeoMaster.UI:build:production"
+              "browserTarget": "GeoMaster-UI:build:production"
             },
             "development": {
-              "browserTarget": "GeoMaster.UI:build:development"
+              "browserTarget": "GeoMaster-UI:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -71,7 +72,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "GeoMaster.UI:build"
+            "browserTarget": "GeoMaster-UI:build"
           }
         },
         "test": {
